--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.4",
+    "framer-motion": "^3.3.0",
     "next": "10.0.6",
+    "nodemailer": "^6.4.17",
     "postcss": "^8.2.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "tailwindcss": "^2.0.2"
+    "react-transition-group": "^4.4.1",
+    "tailwindcss": "^2.0.2",
+    "valigators": "latest"
   }
 }
