--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
-    "autoprefixer": "^10.2.4",
+    "@formspree/react": "^2.4.1",
+    "eslint-config-next": "^13.3.0",
     "firebase": "^9.6.10",
     "framer-motion": "3.10.6",
-    "next": "10.2.1",
+    "next": "^13.3.0",
     "nodemailer": "^6.4.17",
-    "postcss": "^8.2.4",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-transition-group": "4.4.5",
-    "tailwindcss": "^2.0.2",
     "valigators": "latest"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
