--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@formspree/react": "^2.4.1",
+    "@react-hook/mouse-position": "^4.1.3",
     "eslint-config-next": "^13.3.0",
     "firebase": "^9.6.10",
     "framer-motion": "3.10.6",
